alignment fix

--- a/frontend1/src/components/Login/Login.css
+++ b/frontend1/src/components/Login/Login.css
@@ -20,10 +20,7 @@ body{
 .mainTitle{ 
   text-align: center;
 }
-.mainContainer{
-  /* border: 2px solid red; */
-  /* height: 100vh; */
-}
+
 .subContainer{
  display: flex; 
  justify-content: center;
