--- a/frontend1/src/components/Navbar/Navbar.css
+++ b/frontend1/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  color: white;
+  width: 100%;
 }
 
 .logoImg{
