--- a/frontend1/src/components/Student/Student.css
+++ b/frontend1/src/components/Student/Student.css
@@ -1,10 +1,9 @@
-
-.mainAdmBox{
-   /* margin: 1rem; */
+.stuStatusBox{
+      /* margin: 1rem; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 100%; */
+    /* width: 90%; */
    background-color: aliceblue;
     padding: 1rem;
 }
